--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "next": "^14.2.1",
-    "next-auth": "^4.24.6",
-    "react": "18.2.0",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "tailwind-merge": "^2.2.2",
@@ -53,7 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
