--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
+    "@clerk/localizations": "^2.4.3",
+    "@clerk/nextjs": "^5.1.2",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -34,7 +36,6 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.3",
-    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
