--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "auth",
         "db",
         "dashboard",
-        "modulo asistencia"
+        "modulo asistencia",
+        "cursos"
     ]
 }
