--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "auth",
         "db",
         "dashboard",
-        "modulo asistencia",
+        "asistencia",
         "cursos",
         "Kid"
     ]
